--- a/main.css
+++ b/main.css
@@ -30,8 +30,9 @@ img{
 .wrapper{
     width: 1000px;
     margin: 0 auto;
-    /*display: flex;*/
-    /*flex-direction: column; attempt*/
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 
     /*
         :
@@ -92,7 +93,7 @@ img{
 }
 #main-navigation a{
     display: block;
-    color: white;
+    color: #eeebda;
     text-decoration: none;
     text-transform: uppercase;
     padding: 10px 20px;
@@ -125,9 +126,10 @@ main{
     flex-basis: 70%;
     position: relative;
     bottom: 50px;
+    flex-basis: 50%;
     /*flex-grow: 3;*/
     /*
-        TODO:
+        :
         - Flexbox: Set the starting width of this element
         - Use relative positioning to bump this upward
     */
@@ -141,7 +143,7 @@ aside{
     bottom: 50px;
     /*flex-grow: 0;*/
     /*
-        TODO:
+        :
         - Flexbox: Set the starting width of this element
         - Use relative positioning to bump this upward
     */
@@ -204,10 +206,12 @@ article footer p{
     */
 }
 #site-footer{
-
+    text-align: center;
+    padding: 20px;
+    color: white;
     background: #333;
     /*
-        TODO:
+          :
         - Style the site footer
     */
 }
