--- a/main.css
+++ b/main.css
@@ -42,9 +42,14 @@ img{
     */
 }
 #site-header{
-  /*display: flex;*/
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  /*justify-content: space-between;*/
+
+  /*flex-wrap: wrap;*/
     /*
-        TODO-wip
+        -wip
         - Flexbox property here
     */
 }
@@ -97,6 +102,10 @@ img{
     text-decoration: none;
     text-transform: uppercase;
     padding: 10px 20px;
+    flex-grow: 1;
+    /*flex-basis: 80%;*/
+    /*display: flex;*/
+    /*justify-content: center;*/
     /*border: 1px solid red;*/
 
     /*
@@ -106,6 +115,7 @@ img{
 }
 #main-navigation #logo{
     margin-right: 500px;
+    flex-grow: 5;
 
     /*
         :
@@ -123,11 +133,9 @@ main{
     padding: 20px;
     background-color: #444;
     box-shadow: -5px 5px 8px rgba( 0, 0, 0, 0.3 );
-    flex-basis: 70%;
     position: relative;
     bottom: 50px;
     flex-basis: 50%;
-    /*flex-grow: 3;*/
     /*
         :
         - Flexbox: Set the starting width of this element
